Added Transaction Search page.

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ BODY {
 }
 img { border: 0px; }
 * { font-size:18pt; } /* Default font size for everything is 18pt */
-
+SMALL, SMALL * {
+	font-size:12pt;
+}
 /* Text in header-3 style is size 24pt, light gray, with a light gray bottom border that reaches the entire page width */
 h3 {
   font-size:24pt;
